--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires-python = ">=3.13, <4.0"
 
 dependencies = [
     "django (>=5.2.3,<6.0.0)",
+    "pillow (>=11.2.1,<12.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
@@ -40,13 +41,10 @@ addopts = '-p no:warnings'
 
 [tool.taskipy.tasks]
 lint = 'ruff check'
-pre_format = 'ruff check --fix'
 format = 'ruff format'
 makemigrations = 'cd $(git rev-parse --show-toplevel) && python aprosys/manage.py makemigrations'
 migrate = 'cd $(git rev-parse --show-toplevel) && python aprosys/manage.py migrate'
 run = 'cd $(git rev-parse --show-toplevel) && python aprosys/manage.py runserver'
-test = 'pytest -s -x --cov=fastapi_zero -vv'
-post_test = 'coverage html'
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
