--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requires-python = ">=3.13, <4.0"
 dependencies = [
     "django (>=5.2.3,<6.0.0)",
     "pillow (>=11.2.1,<12.0.0)",
+    "django-widget-tweaks (>=1.5.0,<2.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
